@@ -1,21 +1,23 @@
-70 say
 100 auth
-50 part
+90 quit
 85 config
 80 nick
+80 nickserv
+80 http
+70 opmeh
+70 say
+50 part
 50 join
+15 delquote
 12 msginsult
+12 remind+
+5 rmlart
+5 rmpraise
 5 keycmd
 5 lart
 5 addlart
-10 rmlart
 5 addpraise
-10 rmpraise
-5 addquote
-12 remind+
-5 getquote
-90 quit
 5 remind
 5 keyword
-15 delquote
-70 opmeh
+5 addquote
+5 getquote
